--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-                <img src="./img/duck.png" alt="logo" style="width: 50px;">
+            <img src="./img/duck.png" alt="logo" style="width: 50px;">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,38 @@
           </div>
         </div>
       </nav>
+
+      <main>
+        <div class="container my-4">
+            <div class="row g-3">
+                <div class="col-sm-12 d-flex justify-content-between align-items-center">
+                    <h1>Catalogo Libri</h1>
+                    <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                </div>
+
+                <table class="col-sm-12 table table-striped align-middle">
+                    <thead>
+                        <th>Titolo</th>
+                        <th>Data Prestito</th>
+                        <th class="d-sm-none d-md-block">Stato</th>
+                        <th class="text-center">Azioni</th>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>I pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+      </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
