--- a/index.html
+++ b/index.html
@@ -51,17 +51,116 @@
                 <table class="col-sm-12 table table-striped align-middle">
                     <thead>
                         <th>Titolo</th>
-                        <th>Data Prestito</th>
-                        <th class="d-sm-none d-md-block">Stato</th>
+                        <th class="d-sm-none d-md-table-cell">Data Prestito</th>
+                        <th>Stato</th>
                         <th class="text-center">Azioni</th>
                     </thead>
 
                     <tbody>
                         <tr>
                             <td>I pilastri della terra</td>
-                            <td>-</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
-                            <td class="text-center">
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>I promessi sposi</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Il signore degli anelli</td>
+                            <td class="d-sm-none d-md-table-cell">18/10/2023</td>
+                            <td><span class="badge text-white bg-warning">In prestito</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Harry Potter e la pietra filosofale</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Il codice Da Vinci</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Shining</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>La divina commedia</td>
+                            <td class="d-sm-none d-md-table-cell">21/09/2023</td>
+                            <td><span class="badge text-white bg-warning">In prestito</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Il trono di spade</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Il mondo di Sofia</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                            <td class="d-sm-none d-md-table-cell">25/07/2023</td>
+                            <td><span class="badge text-white bg-warning">In prestito</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Il piccolo principe</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>La storia infinita</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
                                 <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
                                 <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
                             </td>
