--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <main>
         <div class="container my-4">
             <div class="row g-3">
-                <div class="col-12">
+                <div class="col-12 col-lg-9">
                     <div class="d-flex justify-content-between align-items-center">
                         <h1>Catalogo Libri</h1>
                         <button type="button" class="btn btn-primary">Aggiungi Libro</button>
@@ -170,7 +170,7 @@
                     </table>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 col-lg-3">
                     <div class="card mb-4">
                         <h3 class="card-header">Todo</h3>
                         <div class="card-body">
@@ -198,31 +198,31 @@
                                 <div class="accordion-item">
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                      Accordion Item #1
+                                      Come aggiungere un nuovo libro?
                                     </button>
                                   </h2>
                                   <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dignissimos vel, dolorem reiciendis asperiores facilis quod laboriosam laborum molestias commodi? Fugit quos laudantium modi repudiandae fugiat iusto saepe cumque aut.</div>
                                   </div>
                                 </div>
                                 <div class="accordion-item">
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                      Accordion Item #2
+                                      Come posso accedere all'anagrafica utenti?
                                     </button>
                                   </h2>
                                   <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, quisquam. Magnam, labore. Magni neque velit corrupti id, voluptate, minima quis debitis voluptas natus aperiam commodi! Doloribus adipisci quidem quis. Beatae.</div>
                                   </div>
                                 </div>
                                 <div class="accordion-item">
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                      Accordion Item #3
+                                      Posso usare questa dashboard da mobile?
                                     </button>
                                   </h2>
                                   <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sit quibusdam dolorem odio dicta fuga quod, possimus itaque! Eum nulla quas inventore. Voluptate quae repellat laborum a. Numquam, cupiditate at?</div>
                                   </div>
                                 </div>
                               </div>
