--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             <img src="./img/duck.png" alt="logo" style="width: 50px;">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#">Storico Prestiti</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-disabled="true">Help</a>
+                <a class="nav-link" href="#">Help</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -38,15 +38,15 @@
             </form>
           </div>
         </div>
-      </nav>
+    </nav>
 
-      <main>
+    <main>
         <div class="container my-4">
             <div class="row g-3">
                 <div class="col-12 col-lg-9">
                     <div class="d-flex justify-content-between align-items-center">
                         <h1>Catalogo Libri</h1>
-                        <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                        <a href="./aggiungi-libro.html" type="button" class="btn btn-primary">Aggiungi Libro</a>
                     </div>
 
                     <table class="table table-striped align-middle">
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </div>
-      </main>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
