--- a/aggiungi-libro.html
+++ b/aggiungi-libro.html
@@ -43,15 +43,42 @@
     <main>
         <div class="container my-4">
             <h2>Nuovo Libro</h2>
-            <form class="my-4 fs-5" action="">
-                <div class="row">
+            <form class="my-4 fw-medium" action="">
+                <div class="row g-4">
                     <div class="col">
-                        <label for="surname" class="form-label">Nome Autore*</label>
-                        <input class="form-control" type="text" name="surname" id="surname" placeholder="Inserisci il nome dell'autore" required>
+                        <label for="name" class="form-label fs-5">Nome Autore*</label>
+                        <input class="form-control" type="text" name="name" id="name" placeholder="Inserisci il nome dell'autore" required>
                     </div>
                     <div class="col">
-                        <label for="name" class="form-label">Cognome Autore*</label>
-                        <input class="form-control" type="text" name="name" id="name" placeholder="Inserisci il cognome dell'autore" required>
+                        <label for="surname" class="form-label fs-5">Cognome Autore*</label>
+                        <input class="form-control" type="text" name="surname" id="surname" placeholder="Inserisci il cognome dell'autore" required>
+                    </div>
+                    <div class="col-12">
+                        <label for="title" class="form-label fs-5">Titolo</label>
+                        <input class="form-control" type="text" name="title" id="title" placeholder="Inserisci il titolo del libro" required>
+                        <div class="form-text">Titolo versione italiana</div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <label for="genre" class="form-label fs-5">Genere</label>
+                        <select class="form-select" id="genre">
+                            <option selected>Scegli il genere</option>
+                            <option value="1">Avventura</option>
+                            <option value="2">Biografia</option>
+                            <option value="3">Commedia</option>
+                            <option value="4">Fantascienza</option>
+                            <option value="5">Giallo</option>
+                            <option value="6">Poesia</option>
+                            <option value="7">Romanzo storico</option>
+                            <option value="8">Saggio</option>
+                          </select>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <label for="date" class="form-label fs-5">Anno di Pubblicazione</label>
+                        <input  class="form-control" type="number" name="date" id="date" max="2024" placeholder="Inserisci l'anno">
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <label for="isbn" class="form-label fs-5">ISBN#*</label>
+                        <input class="form-control" type="text" name="isbn" id="isbn" placeholder="Inserisci il codice ISBN#" minlength="10" maxlength="13" required>
                     </div>
                 </div>
             </form>
